# mixin-desktop

./: .gitignore  Cargo.toml
mixin-bot-sdk/: Cargo.toml
mixin-bot-sdk/src/: api.rs  blaze_message.rs  client.rs  credential.rs  err.rs  lib.rs  message.rs  message_category.rs
mixin-bot-sdk/src/api/: account_api.rs  circle_api.rs  conversation_api.rs  message_api.rs  provisioning_api.rs  token_api.rs  user_api.rs
mixin-dekstop-core/: .gitignore  Cargo.toml
mixin-dekstop-core/migrations/2024-07-09-153948_init_database/: down.sql  up.sql
mixin-dekstop-core/src/: lib.rs  main.rs
mixin-dekstop-core/src/core/: blaze.rs  blaze_message.rs  constants.rs  crypto.rs  decrypt_message.rs  mod.rs  model.rs
mixin-dekstop-core/src/core/crypto/: compose_message.rs  key_help.rs  signal_protocol.rs  signal_protocol_store.rs
mixin-dekstop-core/src/core/message/: completer.rs  decrypt.rs  sender.rs
mixin-dekstop-core/src/core/model/: auth.rs  conversation.rs  job.rs  message.rs  signal.rs
mixin-dekstop-core/src/core/util/: mod.rs
mixin-dekstop-core/src/db/: app.rs  database.rs  error.rs  expired_message.rs  flood_message.rs  job.rs  key_value.rs  message.rs  mixin.rs  mod.rs  schema.rs  signal.rs
mixin-dekstop-core/src/db/app/migrations/: 01_init.down.sql  01_init.up.sql
mixin-dekstop-core/src/db/mixin/: circle.rs  circle_conversation_dao.rs  conversation.rs  database.rs  expired_message.rs  flood_message.rs  job.rs  message.rs  message_history.rs  message_mention.rs  pin_message.rs  safe_snapshot.rs  snapshot.rs  user.rs
mixin-dekstop-core/src/db/mixin/migrations/: 01_init.up.sql
mixin-dekstop-core/src/db/signal/: crypto_store.rs  database.rs  identity.rs  pre_key.rs  ratchet_sender_key.rs  sender_key.rs  session.rs  signed_pre_key.rs
mixin-dekstop-core/src/db/signal/migrations/: 01_init_db.down.sql  01_init_db.up.sql
mixin-dekstop-core/src/sdk/: account.rs  api.rs  blaze_message.rs  client.rs  credential.rs  err.rs  message.rs  message_category.rs  mod.rs
mixin-dekstop-core/src/sdk/api/: account_api.rs  user_api.rs
mixin_desktop_core/: Cargo.toml
mixin_desktop_core/src/: main.rs
mixin_desktop_core/src/core/: message.rs  mod.rs  model.rs
mixin_desktop_core/src/core/crypto/: provisioning_cipher.rs  signal_protocol.rs  signal_protocol_store.rs
mixin_desktop_core/src/core/message/: blaze.rs  decrypt.rs  sender.rs
mixin_desktop_core/src/core/model/: auth.rs  circle.rs  conversation.rs
mixin_desktop_core/src/core/util/: mod.rs
mixin_desktop_core/src/db/: error.rs  key_value.rs  signal.rs
mixin_desktop_core/src/db/app/: auth.rs
mixin_desktop_core/src/db/app/migrations/: 01_init.down.sql
mixin_desktop_core/src/db/mixin/: app.rs  circle_conversation_dao.rs  conversation.rs  database.rs  expired_message.rs  flood_message.rs  job.rs  message_mention.rs  participant.rs  participant_session.rs  sticker.rs  user.rs  util.rs
mixin_desktop_core/src/db/mixin/migrations/: 01_init.down.sql
mixin_desktop_core/src/db/signal/: database.rs  pre_key.rs  sender_key.rs
mixin_desktop_core/src/db/signal/migrations/: 01_init_db.down.sql  01_init_db.up.sql
