[package]
name = "mixin-bot-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.5"
serde_json = "1.0.120"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.9.1", features = ["v4"] }
base16ct = { version = "0.2.0", features = ["alloc"] }
lazy_static = "1.5.0"
anyhow = "1.0.86"
thiserror = "1.0.63"
log = "0.4.22"
sha2 = "0.10.8"
sha3 = "0.10.8"
jsonwebtoken = "9"
tokio = { version = "1.38.0", features = ["full"] }
ring = "0.17.8"
base64ct = { version = "1.6.0", features = ["alloc", "std"] }
sqlx = { version = "0.8.0", features = ["chrono"] }
bytes = "1.7.1"


[dev-dependencies]
simplelog = { version = "0.12.2", features = ["test"] }
