[package]
name = "mixin-dekstop-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.5"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
jsonwebtoken = "9"
uuid = { version = "1.9.1", features = ["v4"] }
base16ct = { version = "0.2.0", features = ["alloc"] }
ring = "0.17.8"
ed25519 = "2.2.3"
base64ct = { version = "1.6.0", features = ["alloc"]}