[package]
name = "mixin-dekstop-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.5"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
jsonwebtoken = "9"
uuid = { version = "1.9.1", features = ["v4"] }
base16ct = { version = "0.2.0", features = ["alloc"] }
ring = "0.17.8"
ed25519 = "2.2.3"
base64ct = { version = "1.6.0", features = ["alloc"] }
diesel = { version = "2.2.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
futures = "0.3"
flate2 = "1.0"
rand = "0.8.5"
rand_core = "0.5.1"
futures-channel = "0.3.30"
log = "0.4"
simplelog = { version = "0.12.2", features = ["test"] }
lazy_static = "1.5.0"
md5 = "0.7.0"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", rev = "f10ff5488899965d8d1a8504fbdf9418d04c08f2" }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio", "macros", "with-chrono"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlx-sqlite", "chrono"] }
